--- a/iconos.qrc
+++ b/iconos.qrc
@@ -1,5 +1,5 @@
 <RCC>
     <qresource prefix="/">
-        <file>iconos/access.ico</file>
+        <file>iconos/Database 2.ico</file>
     </qresource>
 </RCC>
