--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -153,8 +153,8 @@
       <property name="geometry">
        <rect>
         <x>690</x>
-        <y>120</y>
-        <width>101</width>
+        <y>130</y>
+        <width>100</width>
         <height>61</height>
        </rect>
       </property>
@@ -179,9 +179,9 @@
       <property name="geometry">
        <rect>
         <x>680</x>
-        <y>110</y>
+        <y>10</y>
         <width>121</width>
-        <height>171</height>
+        <height>371</height>
        </rect>
       </property>
       <property name="frameShape">
@@ -191,6 +191,24 @@
        <enum>QFrame::Raised</enum>
       </property>
      </widget>
+     <widget class="QPushButton" name="pushButton_6">
+      <property name="geometry">
+       <rect>
+        <x>690</x>
+        <y>50</y>
+        <width>100</width>
+        <height>61</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>Buscar</string>
+      </property>
+     </widget>
+     <zorder>frame_2</zorder>
+     <zorder>tableView_2</zorder>
+     <zorder>pushButton_4</zorder>
+     <zorder>pushButton_5</zorder>
+     <zorder>pushButton_6</zorder>
     </widget>
    </widget>
    <widget class="QLabel" name="label">
@@ -300,6 +318,9 @@
   </widget>
   <widget class="QStatusBar" name="statusBar"/>
   <action name="actionCrear_Tabla">
+   <property name="enabled">
+    <bool>false</bool>
+   </property>
    <property name="text">
     <string>Crear Tabla</string>
    </property>
