--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -139,7 +139,7 @@
      <attribute name="title">
       <string>Datos</string>
      </attribute>
-     <widget class="QTableView" name="tableView_2">
+     <widget class="QTableWidget" name="tableWidget_2">
       <property name="geometry">
        <rect>
         <x>20</x>
@@ -205,7 +205,7 @@
       </property>
      </widget>
      <zorder>frame_2</zorder>
-     <zorder>tableView_2</zorder>
+     <zorder>tableWidget_2</zorder>
      <zorder>pushButton_4</zorder>
      <zorder>pushButton_5</zorder>
      <zorder>pushButton_6</zorder>
