--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>1034</width>
-    <height>612</height>
+    <height>584</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -28,7 +28,7 @@
      </rect>
     </property>
     <property name="currentIndex">
-     <number>1</number>
+     <number>0</number>
     </property>
     <widget class="QWidget" name="tab">
      <attribute name="title">
@@ -76,14 +76,18 @@
       </property>
       <property name="geometry">
        <rect>
-        <x>560</x>
-        <y>90</y>
-        <width>161</width>
+        <x>650</x>
+        <y>70</y>
+        <width>131</width>
         <height>51</height>
        </rect>
       </property>
       <property name="text">
        <string>Agregar Campo</string>
+      </property>
+      <property name="icon">
+       <iconset resource="iconos.qrc">
+        <normaloff>:/iconos/agregar.png</normaloff>:/iconos/agregar.png</iconset>
       </property>
      </widget>
      <widget class="QPushButton" name="pushButton_2">
@@ -92,14 +96,18 @@
       </property>
       <property name="geometry">
        <rect>
-        <x>560</x>
-        <y>160</y>
-        <width>161</width>
+        <x>650</x>
+        <y>130</y>
+        <width>131</width>
         <height>51</height>
        </rect>
       </property>
       <property name="text">
        <string>Eliminar Campo</string>
+      </property>
+      <property name="icon">
+       <iconset resource="iconos.qrc">
+        <normaloff>:/iconos/eliminar.png</normaloff>:/iconos/eliminar.png</iconset>
       </property>
      </widget>
      <widget class="QPushButton" name="pushButton_3">
@@ -108,23 +116,27 @@
       </property>
       <property name="geometry">
        <rect>
-        <x>560</x>
-        <y>230</y>
-        <width>161</width>
+        <x>650</x>
+        <y>190</y>
+        <width>131</width>
         <height>51</height>
        </rect>
       </property>
       <property name="text">
        <string>Guardar Tabla</string>
       </property>
+      <property name="icon">
+       <iconset resource="iconos.qrc">
+        <normaloff>:/iconos/save.png</normaloff>:/iconos/save.png</iconset>
+      </property>
      </widget>
      <widget class="QFrame" name="frame">
       <property name="geometry">
        <rect>
-        <x>450</x>
-        <y>70</y>
-        <width>181</width>
-        <height>241</height>
+        <x>440</x>
+        <y>40</y>
+        <width>201</width>
+        <height>331</height>
        </rect>
       </property>
       <property name="frameShape">
@@ -142,9 +154,9 @@
      <widget class="QTableWidget" name="tableWidget_2">
       <property name="geometry">
        <rect>
-        <x>20</x>
+        <x>10</x>
         <y>10</y>
-        <width>651</width>
+        <width>641</width>
         <height>371</height>
        </rect>
       </property>
@@ -155,14 +167,18 @@
       </property>
       <property name="geometry">
        <rect>
-        <x>690</x>
+        <x>669</x>
         <y>130</y>
-        <width>100</width>
+        <width>121</width>
         <height>61</height>
        </rect>
       </property>
       <property name="text">
        <string>Nuevo Registro</string>
+      </property>
+      <property name="icon">
+       <iconset resource="iconos.qrc">
+        <normaloff>:/iconos/agregar.png</normaloff>:/iconos/agregar.png</iconset>
       </property>
      </widget>
      <widget class="QPushButton" name="pushButton_5">
@@ -171,22 +187,26 @@
       </property>
       <property name="geometry">
        <rect>
-        <x>690</x>
+        <x>669</x>
         <y>210</y>
-        <width>100</width>
+        <width>121</width>
         <height>61</height>
        </rect>
       </property>
       <property name="text">
        <string>Guardar Cambios</string>
       </property>
+      <property name="icon">
+       <iconset resource="iconos.qrc">
+        <normaloff>:/iconos/save.png</normaloff>:/iconos/save.png</iconset>
+      </property>
      </widget>
      <widget class="QFrame" name="frame_2">
       <property name="geometry">
        <rect>
-        <x>680</x>
+        <x>660</x>
         <y>10</y>
-        <width>121</width>
+        <width>141</width>
         <height>371</height>
        </rect>
       </property>
@@ -203,14 +223,18 @@
       </property>
       <property name="geometry">
        <rect>
-        <x>690</x>
+        <x>669</x>
         <y>50</y>
-        <width>100</width>
+        <width>121</width>
         <height>61</height>
        </rect>
       </property>
       <property name="text">
        <string>Buscar</string>
+      </property>
+      <property name="icon">
+       <iconset resource="iconos.qrc">
+        <normaloff>:/iconos/buscar.png</normaloff>:/iconos/buscar.png</iconset>
       </property>
      </widget>
      <zorder>frame_2</zorder>
@@ -254,7 +278,7 @@
     <property name="geometry">
      <rect>
       <x>940</x>
-      <y>510</y>
+      <y>470</y>
       <width>75</width>
       <height>23</height>
      </rect>
@@ -267,7 +291,7 @@
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>530</y>
+      <y>500</y>
       <width>931</width>
       <height>20</height>
      </rect>
