--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -126,6 +126,9 @@
       </property>
      </widget>
      <widget class="QFrame" name="frame">
+      <property name="enabled">
+       <bool>true</bool>
+      </property>
       <property name="geometry">
        <rect>
         <x>450</x>
